# Fia

./: .cdtproject  .project  CMakeLists.txt  CodeProfile  Constants.h.template  Doxyfile  FreeImageAlgorithms.sln  FreeImageAlgorithms.sln.template  FreeImageAlgorithms.vcproj  FreeImageAlgorithms.vcproj.template  FreeImageAlgorithms_FillHole.cpp  INSTALL.txt  LGPL License.txt  MakeTemplateBuildFiles.bat  README.txt  Test.cpp  Viewer  indent.sh
Anti-Grain-Lite/: agg.h
Tests/: AllTests.c  AllTests.cpp  CMakeLists.txt  Constants.h  Constants.h.template  CuTest.cpp  CuTest.h  FreeImageAlgorithmsColourTests.c  FreeImageAlgorithmsColourTests.cpp  FreeImageAlgorithmsConvolutionTests.cpp  FreeImageAlgorithmsFFTTests.c  FreeImageAlgorithmsFFTTests.cpp  FreeImageAlgorithmsLinearScale.c  FreeImageAlgorithmsLinearScale.cpp  FreeImageAlgorithmsMorphologyTests.cpp  FreeImageAlgorithmsParticleTests.cpp  FreeImageAlgorithmsStatisticTests.c  FreeImageAlgorithmsStatisticTests.cpp  FreeImageAlgorithmsUtilityTests.c  FreeImageAlgorithmsUtilityTests.cpp  FreeImageAlgorithms_ArithmeticTests.c  FreeImageAlgorithms_ArithmeticTests.cpp  FreeImageAlgorithms_ColourTests.cpp  FreeImageAlgorithms_ConvolutionTests.cpp  FreeImageAlgorithms_DrawingTests.cpp  FreeImageAlgorithms_GradientBlend.cpp  FreeImageAlgorithms_IOTests.c  FreeImageAlgorithms_IOTests.cpp  FreeImageAlgorithms_LinearScale.cpp  FreeImageAlgorithms_LogicTests.cpp  FreeImageAlgorithms_MorphologyTests.cpp  FreeImageAlgorithms_ParticleTests.cpp  FreeImageAlgorithms_Testing.c  FreeImageAlgorithms_Testing.cpp  FreeImageAlgorithms_Testing.h  FreeImageAlgorithms_UtilityTests.cpp  README.txt  Tests.vcproj.template  current_function.hpp
Tests/Data/: README.txt
Tests/FiaViewer/: CMakeLists.txt  FiaViewer.cpp  FiaViewer.h  FiaViewer.ui  FiaWindow.cpp  FiaWindow.h  FiaWindow.ui  main.cpp
Wrappers/FreeImageAlgorithmsPy/: FreeImageAlgorithmsPy.py  __init__.py  library.py
Wrappers/FreeImageAlgorithmsSharp/: AssemblyInfo.cs  FreeImage.cs  FreeImageAlgorithms.cs  FreeImageAlgorithmsInterop.cs  FreeImageAlgorithmsSharp.csproj  FreeImageAlgorithmsSharp.mds  FreeImageAlgorithmsSharp.sln  FreeImageAlgorithmsSharp.userprefs  FreeImageInterop.cs
Wrappers/FreeImagePy/: .cvsignore  FreeImagePy.py  __init__.py  buffer.py  constants.py  funct_list.py  library.py  utils.py
Wrappers/Test/: Cyrinic.glade  Cyrinic.py  imageviewer.pyd
cmake_modules/: FindFreeImage.cmake
docs/html/: __kiss__fft__guts_8h-source.html  __kiss__fft__guts_8h.html  _all_tests_8cpp-source.html  _all_tests_8cpp.html  _cu_test_8cpp-source.html  _cu_test_8cpp.html  _cu_test_8h-source.html  _cu_test_8h.html  _free_image_8h-source.html  _free_image_8h.html  _free_image_algorithms_8h-source.html  _free_image_algorithms_8h.html  _free_image_algorithms___arithmetic_8cpp-source.html  _free_image_algorithms___arithmetic_8cpp.html  _free_image_algorithms___arithmetic_8h-source.html  _free_image_algorithms___arithmetic_8h.html  _free_image_algorithms___arithmetic_tests_8cpp-source.html  _free_image_algorithms___arithmetic_tests_8cpp.html  _free_image_algorithms___colour_8cpp-source.html  _free_image_algorithms___colour_8cpp.html  _free_image_algorithms___colour_8h-source.html  _free_image_algorithms___colour_8h.html  _free_image_algorithms___convolution_8cpp-source.html  _free_image_algorithms___convolution_8cpp.html  _free_image_algorithms___convolution_8h-source.html  _free_image_algorithms___convolution_8h.html  _free_image_algorithms___error_8cpp-source.html  _free_image_algorithms___error_8cpp.html  _free_image_algorithms___error_8h-source.html  _free_image_algorithms___error_8h.html  _free_image_algorithms___f_f_t_8cpp-source.html  _free_image_algorithms___f_f_t_8cpp.html  _free_image_algorithms___f_f_t_8h-source.html  _free_image_algorithms___f_f_t_8h.html  _free_image_algorithms___h_bitmap_8cpp-source.html  _free_image_algorithms___h_bitmap_8cpp.html  _free_image_algorithms___h_bitmap_8h-source.html  (+121 more)
include/: Constants.h  FreeImage.h  FreeImageAlgorithms.h  FreeImageAlgorithms_Arithmetic.h  FreeImageAlgorithms_Colour.h  FreeImageAlgorithms_Convolution.h  FreeImageAlgorithms_Convolution_Private.h  FreeImageAlgorithms_Drawing.h  FreeImageAlgorithms_Error.h  FreeImageAlgorithms_FFT.h  FreeImageAlgorithms_Filters.h  FreeImageAlgorithms_FindImageMaxima.h  FreeImageAlgorithms_HBitmap.h  FreeImageAlgorithms_IO.h  FreeImageAlgorithms_IO_Utils.h  FreeImageAlgorithms_Ics.h  FreeImageAlgorithms_LinearScale.h  FreeImageAlgorithms_Logic.h  FreeImageAlgorithms_MedianFilter.h  FreeImageAlgorithms_MetaData.h  FreeImageAlgorithms_Morphology.h  FreeImageAlgorithms_Palettes.h  FreeImageAlgorithms_Particle.h  FreeImageAlgorithms_Private.h  FreeImageAlgorithms_Statistics.h  FreeImageAlgorithms_Utilities.h  FreeImageAlgorithms_Utils.h  kiss_fft.h  kiss_fftnd.h  libics.h  libics_conf.h  profile.h
src/: CMakeLists.txt  FreeImageAlgorithms_Arithmetic.cpp  FreeImageAlgorithms_Border.cpp  FreeImageAlgorithms_Colour.cpp  FreeImageAlgorithms_ConvexHull.cpp  FreeImageAlgorithms_Convolution-Templated.cpp  FreeImageAlgorithms_Convolution.cpp  FreeImageAlgorithms_Convolution.txx  FreeImageAlgorithms_DistanceTransform.cpp  FreeImageAlgorithms_Drawing.cpp  FreeImageAlgorithms_Error.cpp  FreeImageAlgorithms_FFT.cpp  FreeImageAlgorithms_FillHole.cpp  FreeImageAlgorithms_Filters.cpp  FreeImageAlgorithms_FindImageMaxima.cpp  FreeImageAlgorithms_FloodFill.cpp  FreeImageAlgorithms_GradientBlend.cpp  FreeImageAlgorithms_HBitmap.cpp  FreeImageAlgorithms_IO.cpp  FreeImageAlgorithms_Ics.cpp  FreeImageAlgorithms_Labeling.cpp  FreeImageAlgorithms_LinearScale.cpp  FreeImageAlgorithms_Logic.cpp  FreeImageAlgorithms_MedianFilter.cpp  FreeImageAlgorithms_MetaData.cpp  FreeImageAlgorithms_Morphology.cpp  FreeImageAlgorithms_Palettes.cpp  FreeImageAlgorithms_ParticleInfo.cpp  FreeImageAlgorithms_Statistics.cpp  FreeImageAlgorithms_Threshold.cpp  FreeImageAlgorithms_Utilities.cpp  agg.cpp  kiss_fft.c  kiss_fft.h  kiss_fftnd.c  profile.c
src/KissFFT/: kiss_fftnd.c
src/agg/: CMakeLists.txt
src/agg/include/: agg_span_image_filter_rgba.h
(+28 files in other folders)
